[gd_scene load_steps=29 format=3 uid="uid://bjythu8jrsr5o"]

[ext_resource type="Script" path="res://Main.gd" id="1_5mhyi"]
[ext_resource type="Script" path="res://Database.gd" id="2_x8r34"]
[ext_resource type="Script" path="res://objects/ItemsTab.gd" id="3_wxfjw"]
[ext_resource type="Script" path="res://objects/UnfoldControl.gd" id="4_a2pk0"]
[ext_resource type="Script" path="res://objects/StructTree.gd" id="5_ar113"]
[ext_resource type="Script" path="res://objects/TagsTab.gd" id="6_2kqfq"]
[ext_resource type="Script" path="res://objects/TagViewer.gd" id="7_k3n6w"]
[ext_resource type="PackedScene" uid="uid://dqd1q2l2xuc2y" path="res://objects/TagElement.tscn" id="8_dhsfd"]
[ext_resource type="PackedScene" uid="uid://buhtxvdgnu0ki" path="res://objects/DataEditDialogueBase.tscn" id="9_p6ieq"]
[ext_resource type="Script" path="res://objects/ItemCreationDialogue.gd" id="10_06y8t"]
[ext_resource type="PackedScene" uid="uid://d1c4lov8epmmv" path="res://objects/ItemListSeparator.tscn" id="11_6eucy"]
[ext_resource type="PackedScene" uid="uid://ymef651v1yws" path="res://objects/ItemListElement2.tscn" id="12_ubi7w"]
[ext_resource type="Script" path="res://objects/LocationCreationDialogue.gd" id="13_c6tp3"]
[ext_resource type="Script" path="res://objects/TreeSelectionDialogue.gd" id="14_qpi1g"]
[ext_resource type="StyleBox" uid="uid://bx3wv2qghdpe8" path="res://styles/BGButtonStyle.tres" id="15_e2j01"]
[ext_resource type="StyleBox" uid="uid://4cmibv0a8kf2" path="res://styles/BGButtonHoverStyle.tres" id="16_uvvjq"]
[ext_resource type="Script" path="res://objects/ActionConfirmDialogue.gd" id="17_36kog"]
[ext_resource type="StyleBox" uid="uid://c5i134ur1to60" path="res://styles/EdittextBaseStyle.tres" id="18_luhyk"]

[sub_resource type="Animation" id="Animation_uywld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TabContainer:offset_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_sniqe"]
resource_name = "mobile_offset"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TabContainer:offset_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 60.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6lyv6"]
_data = {
"RESET": SubResource("Animation_uywld"),
"mobile_offset": SubResource("Animation_sniqe")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blt5x"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.403922)
shadow_size = 10
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnmwu"]
bg_color = Color(0.105882, 0.478431, 0.403922, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 2
border_width_bottom = 4
border_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0uqsx"]
bg_color = Color(0.12549, 0.54902, 0.462745, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 2
border_width_bottom = 4
border_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5o2a"]
bg_color = Color(0.0983006, 0.451795, 0.38104, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 1
border_width_bottom = 3
border_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h135y"]
bg_color = Color(0.854902, 0.45098, 0, 1)
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4n64a"]
bg_color = Color(0.972549, 0.517647, 0, 1)
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_us7rp"]
bg_color = Color(0.900485, 0.477486, 0, 1)
border_width_left = 1
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15

[node name="Main" type="Control" node_paths=PackedStringArray("tree_element", "locations_tab_tree", "category_tab_tree", "tag_tab")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5mhyi")
tree_element = NodePath("TreeSelectionDialogue/TSL/AspectRatioContainer/Control/StructTree")
locations_tab_tree = NodePath("MainControl/TabContainer/Locations/LocationStructTree")
category_tab_tree = NodePath("MainControl/TabContainer/Categories/CategoryStructTree")
tag_tab = NodePath("MainControl/TabContainer/Tags")

[node name="Database" type="Node" parent="."]
script = ExtResource("2_x8r34")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="MainControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainControl"]
libraries = {
"": SubResource("AnimationLibrary_6lyv6")
}

[node name="TabContainer" type="TabContainer" parent="MainControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 3

[node name="Items" type="Control" parent="MainControl/TabContainer" node_paths=PackedStringArray("items_holder", "temp_items_holder")]
visible = false
layout_mode = 2
script = ExtResource("3_wxfjw")
items_holder = NodePath("ItemsListPanel/ScrollContainer/VBoxContainer")
temp_items_holder = NodePath("ItemsListPanel/TempItemHolder")

[node name="ItemsToolPanel" type="Panel" parent="MainControl/TabContainer/Items"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 5.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="ItemsSearchLineEdit" type="LineEdit" parent="MainControl/TabContainer/Items/ItemsToolPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -85.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreateItemButton" type="Button" parent="MainControl/TabContainer/Items/ItemsToolPanel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Create"

[node name="ItemsListPanel" type="Panel" parent="MainControl/TabContainer/Items"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 50.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainControl/TabContainer/Items/ItemsListPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainControl/TabContainer/Items/ItemsListPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_a2pk0")
control_children = true

[node name="TempItemHolder" type="Control" parent="MainControl/TabContainer/Items/ItemsListPanel"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Locations" type="Control" parent="MainControl/TabContainer"]
visible = false
layout_mode = 2

[node name="LocationToolPanel" type="Panel" parent="MainControl/TabContainer/Locations"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 5.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="ItemsSearchLineEdit" type="LineEdit" parent="MainControl/TabContainer/Locations/LocationToolPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -85.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreateLocationButton" type="Button" parent="MainControl/TabContainer/Locations/LocationToolPanel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Create"

[node name="LocationStructTree" type="Tree" parent="MainControl/TabContainer/Locations"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 50.0
offset_right = -5.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ar113")
has_edit_buttons = true

[node name="Categories" type="Control" parent="MainControl/TabContainer"]
visible = false
layout_mode = 2

[node name="CategoryToolPanel" type="Panel" parent="MainControl/TabContainer/Categories"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 5.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="CategorySearchLineEdit" type="LineEdit" parent="MainControl/TabContainer/Categories/CategoryToolPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -85.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreateCategoryButton" type="Button" parent="MainControl/TabContainer/Categories/CategoryToolPanel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Create"

[node name="CategoryStructTree" type="Tree" parent="MainControl/TabContainer/Categories"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 50.0
offset_right = -5.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ar113")
has_edit_buttons = true

[node name="Tags" type="Control" parent="MainControl/TabContainer" node_paths=PackedStringArray("tag_viewer")]
layout_mode = 2
script = ExtResource("6_2kqfq")
tag_viewer = NodePath("Control/ScrollContainer/TagViewer")

[node name="Control" type="Control" parent="MainControl/TabContainer/Tags"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 55.0
offset_right = -5.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainControl/TabContainer/Tags/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TagViewer" type="HFlowContainer" parent="MainControl/TabContainer/Tags/Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("7_k3n6w")

[node name="TagElement" parent="MainControl/TabContainer/Tags/Control/ScrollContainer/TagViewer" instance=ExtResource("8_dhsfd")]
layout_mode = 2

[node name="TagToolPanel" type="Panel" parent="MainControl/TabContainer/Tags"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 5.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="CreateTagButton" type="Button" parent="MainControl/TabContainer/Tags/TagToolPanel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Create"

[node name="Projects" type="Control" parent="MainControl/TabContainer"]
visible = false
layout_mode = 2

[node name="Builds" type="Control" parent="MainControl/TabContainer"]
visible = false
layout_mode = 2

[node name="Settings" type="Control" parent="MainControl/TabContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="MainControl"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ItemCreationDialogue" parent="." node_paths=PackedStringArray("name_list_item", "description_list_item", "title_label", "location_element", "quantity_element", "category_element", "item_data_components", "stock_data_components", "delete_button") instance=ExtResource("9_p6ieq")]
visible = false
layout_mode = 1
script = ExtResource("10_06y8t")
name_list_item = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Name")
description_list_item = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Description")
title_label = NodePath("TextureRect/Title")
location_element = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Location")
quantity_element = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Quantity")
category_element = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Category")
item_data_components = [NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Description"), NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Image"), NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Category"), NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Tags"), NodePath("ItemsPanel/ScrollContainer/VBoxContainer/ItemDataSeparator")]
stock_data_components = [NodePath("ItemsPanel/ScrollContainer/VBoxContainer/StockDataSeparator"), NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Location"), NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Quantity")]
delete_button = NodePath("SDCButtons/HBoxContainer/DeleteButton")

[node name="VBoxContainer" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer" index="0"]
unfold_item_list = Array[NodePath]([NodePath("Name"), NodePath("Description")])

[node name="ItemDataSeparator" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="0" instance=ExtResource("11_6eucy")]
layout_mode = 2
separator_text = "Item Data"

[node name="Name" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="1" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Name"
placeholder_text = "Enter an Item Name"

[node name="Description" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="2" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Description"
placeholder_text = "Enter an Item Description"

[node name="Image" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="3" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Image"
list_item_mode = 2

[node name="Category" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="4" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Category"
list_item_mode = 1

[node name="Tags" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="5" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Tags"
placeholder_text = "Enter tags separated by comma"

[node name="StockDataSeparator" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="6" instance=ExtResource("11_6eucy")]
layout_mode = 2
separator_text = "Initial Stock"

[node name="Location" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="7" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Location"
list_item_mode = 1

[node name="Quantity" parent="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="8" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Quantity"
list_item_mode = 3

[node name="LocationCreationDialogue" parent="." node_paths=PackedStringArray("title_label", "name_list_item", "description_list_item", "parent_list_item", "delete_button") instance=ExtResource("9_p6ieq")]
visible = false
layout_mode = 1
script = ExtResource("13_c6tp3")
title_label = NodePath("TextureRect/Title")
name_list_item = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Name")
description_list_item = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Description")
parent_list_item = NodePath("ItemsPanel/ScrollContainer/VBoxContainer/Parent")
delete_button = NodePath("SDCButtons/HBoxContainer/DeleteButton")

[node name="Name" parent="LocationCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="0" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Name"
placeholder_text = "Enter a Location Name"

[node name="Description" parent="LocationCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="1" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Description"
placeholder_text = "Enter a Location Description"

[node name="Parent" parent="LocationCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer" index="2" instance=ExtResource("12_ubi7w")]
layout_mode = 2
title_text = "Parent"
placeholder_text = "Enter a Location Name"
list_item_mode = 1

[node name="Title" parent="LocationCreationDialogue/TextureRect" index="0"]
theme_override_font_sizes/font_size = 32
text = "Create Location"

[node name="TreeSelectionDialogue" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_qpi1g")

[node name="CancelTreeSelection" type="Button" parent="TreeSelectionDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("15_e2j01")
theme_override_styles/hover = ExtResource("16_uvvjq")
theme_override_styles/pressed = ExtResource("15_e2j01")

[node name="TSL" type="Control" parent="TreeSelectionDialogue"]
layout_mode = 1
anchor_top = 0.09
anchor_right = 1.0
anchor_bottom = 0.91
offset_left = 15.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="TreeSelectionDialogue/TSL"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Panel" parent="TreeSelectionDialogue/TSL/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_blt5x")

[node name="ColorRect" type="ColorRect" parent="TreeSelectionDialogue/TSL/AspectRatioContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StructTree" type="Tree" parent="TreeSelectionDialogue/TSL/AspectRatioContainer/Control" node_paths=PackedStringArray("tree_selection_dialogue")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.03
anchor_right = 0.97
anchor_bottom = 0.97
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ar113")
tree_selection_dialogue = NodePath("../../../..")

[node name="ActionConfirmDialogue" type="Control" parent="." node_paths=PackedStringArray("warning_label")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("17_36kog")
warning_label = NodePath("TSL/AR/Control/WarningLabel")

[node name="CancelTreeSelection" type="Button" parent="ActionConfirmDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("15_e2j01")
theme_override_styles/hover = ExtResource("16_uvvjq")
theme_override_styles/pressed = ExtResource("15_e2j01")

[node name="TSL" type="Control" parent="ActionConfirmDialogue"]
layout_mode = 1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7
offset_left = 15.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AR" type="AspectRatioContainer" parent="ActionConfirmDialogue/TSL"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
ratio = 1.7

[node name="Control" type="Panel" parent="ActionConfirmDialogue/TSL/AR"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_blt5x")

[node name="TitleLabel" type="Label" parent="ActionConfirmDialogue/TSL/AR/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.273
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ActionConfirmDialogue/TSL/AR/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.647
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ConfirmButton" type="Button" parent="ActionConfirmDialogue/TSL/AR/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_rnmwu")
theme_override_styles/hover = SubResource("StyleBoxFlat_0uqsx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f5o2a")
text = "Confirm"

[node name="CancelButton" type="Button" parent="ActionConfirmDialogue/TSL/AR/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_h135y")
theme_override_styles/hover = SubResource("StyleBoxFlat_4n64a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_us7rp")
text = "Cancel"

[node name="WarningLabel" type="Label" parent="ActionConfirmDialogue/TSL/AR/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.65
offset_left = 15.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.396078, 0.329412, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = ExtResource("18_luhyk")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[connection signal="categories_data_loaded" from="Database" to="." method="_on_database_categories_data_loaded"]
[connection signal="item_data_loaded" from="Database" to="." method="_on_database_item_data_loaded"]
[connection signal="locations_data_loaded" from="Database" to="." method="_on_database_locations_data_loaded"]
[connection signal="tags_data_loaded" from="Database" to="." method="_on_database_tags_data_loaded"]
[connection signal="pressed" from="MainControl/TabContainer/Items/ItemsToolPanel/CreateItemButton" to="." method="_on_create_item_button_pressed"]
[connection signal="pressed" from="MainControl/TabContainer/Locations/LocationToolPanel/CreateLocationButton" to="." method="_on_create_location_button_pressed"]
[connection signal="button_clicked" from="MainControl/TabContainer/Locations/LocationStructTree" to="." method="_on_location_struct_tree_button_clicked"]
[connection signal="pressed" from="MainControl/TabContainer/Categories/CategoryToolPanel/CreateCategoryButton" to="." method="_on_create_category_button_pressed"]
[connection signal="button_clicked" from="MainControl/TabContainer/Categories/CategoryStructTree" to="." method="_on_category_struct_tree_button_clicked"]
[connection signal="pressed" from="MainControl/TabContainer/Tags/TagToolPanel/CreateTagButton" to="MainControl/TabContainer/Tags" method="_on_create_tag_button_pressed"]
[connection signal="location_button_pressed" from="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer/Category" to="ItemCreationDialogue" method="_on_category_selection_button_pressed"]
[connection signal="location_button_pressed" from="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer/Location" to="ItemCreationDialogue" method="_on_location_selection_button_pressed"]
[connection signal="location_button_pressed" from="ItemCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer/Quantity" to="ItemCreationDialogue" method="_on_location_selection_button_pressed"]
[connection signal="pressed" from="ItemCreationDialogue/SDCButtons/HBoxContainer/SaveItemButton" to="ItemCreationDialogue" method="_on_save_item_button_pressed"]
[connection signal="pressed" from="ItemCreationDialogue/SDCButtons/HBoxContainer/DeleteButton" to="ItemCreationDialogue" method="_on_delete_button_pressed"]
[connection signal="pressed" from="ItemCreationDialogue/SDCButtons/HBoxContainer/CancelButton" to="ItemCreationDialogue" method="_on_cancel_button_pressed"]
[connection signal="location_button_pressed" from="LocationCreationDialogue/ItemsPanel/ScrollContainer/VBoxContainer/Parent" to="LocationCreationDialogue" method="_on_parent_selection_button_pressed"]
[connection signal="pressed" from="LocationCreationDialogue/SDCButtons/HBoxContainer/SaveItemButton" to="LocationCreationDialogue" method="_on_save_item_button_pressed"]
[connection signal="pressed" from="LocationCreationDialogue/SDCButtons/HBoxContainer/DeleteButton" to="LocationCreationDialogue" method="_on_delete_button_pressed"]
[connection signal="pressed" from="LocationCreationDialogue/SDCButtons/HBoxContainer/CancelButton" to="LocationCreationDialogue" method="_on_cancel_button_pressed"]
[connection signal="pressed" from="TreeSelectionDialogue/CancelTreeSelection" to="TreeSelectionDialogue" method="_on_cancel_tree_selection_pressed"]
[connection signal="item_selected" from="TreeSelectionDialogue/TSL/AspectRatioContainer/Control/StructTree" to="TreeSelectionDialogue/TSL/AspectRatioContainer/Control/StructTree" method="_on_item_selected"]
[connection signal="pressed" from="ActionConfirmDialogue/CancelTreeSelection" to="ActionConfirmDialogue" method="_on_cancel_tree_selection_pressed"]
[connection signal="pressed" from="ActionConfirmDialogue/TSL/AR/Control/HBoxContainer/ConfirmButton" to="ActionConfirmDialogue" method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ActionConfirmDialogue/TSL/AR/Control/HBoxContainer/CancelButton" to="ActionConfirmDialogue" method="_on_cancel_button_pressed"]

[editable path="ItemCreationDialogue"]
[editable path="LocationCreationDialogue"]
